fix layout bugs v2

--- a/src/scss/_components/_card.scss
+++ b/src/scss/_components/_card.scss
@@ -6,8 +6,8 @@
   box-shadow: none;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding-top: 20px;
   background-color: transparent;
   transition: all .3s ease-out;
   cursor: pointer;
