--- a/src/scss/_layouts/_activity.scss
+++ b/src/scss/_layouts/_activity.scss
@@ -171,8 +171,16 @@
   }
 
   &__text {
+    @include screen (481px, 767px) {
+      text-align: center;
+    }
+
     @include maxScreen(767px) {
       @include caption;
+    }
+
+    @include minScreen(1024px) {
+      text-align: center;
     }
   }
 }
