--- a/src/scss/_layouts/_leaders.scss
+++ b/src/scss/_layouts/_leaders.scss
@@ -12,7 +12,7 @@
   }
 
   @include maxVerticalScreen(600px) {
-    padding-top: 45px;
+    padding-top: 48px;
   }
 
   @include minScreen(1440px) {
